envoy/configs/envoy-client-validation-crl-check.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
node:
  id: mynode
  cluster: mycluster
static_resources:
  clusters:
  - name: mycluster
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: mycluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8081
  listeners:
  - name: http
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: fileaccesslog
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: myroute
            virtual_hosts:
            - name: myupstream
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: mycluster
      transport_socket:
        name: "envoy.transport_sockets.tls"
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
              name: tls_certificate_secret
              sds_config:
                path_config_source:
                  path: /home/tsaarni/work/devenvs/envoy/configs/envoy-sds-auth-secret-tls-certificate.yaml
            validation_context_sds_secret_config:
              name: validation_context_secret
              sds_config:
                path_config_source:
                  path: /home/tsaarni/work/devenvs/envoy/configs/envoy-sds-auth-secret-validation-context.yaml
          require_client_certificate: true


#              trust_chain_verification: VERIFY_TRUST_CHAIN
#              crl:
#                filename: /home/tsaarni/work/devenvs/envoy/certs/rootCA.crl

            # https://www.envoyproxy.io/docs/envoy/v1.26.1/api-v3/extensions/transport_sockets/tls/v3/common.proto#envoy-v3-api-msg-extensions-transport-sockets-tls-v3-tlscertificate

            # https://www.envoyproxy.io/docs/envoy/v1.26.1/api-v3/extensions/transport_sockets/tls/v3/common.proto#envoy-v3-api-msg-extensions-transport-sockets-tls-v3-certificatevalidationcontext
