envoy/configs/envoy-crash-in-ttlmanager.yaml
node:
  id: mynode
  cluster: mycluster

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  clusters:
  - name: mycluster
    type: STRICT_DNS
    connect_timeout: 5s
    transport_socket:
      name: "envoy.transport_sockets.tls"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
            name: tls_certificate_secret
            sds_config:
              path_config_source:
                path: /input/configs/envoy-sds-auth-secret-tls-certificate-compose.yaml
          #tls_certificates:
          #  certificate_chain:
          #    filename: /input/certs/envoy.pem
          #  private_key:
          #    filename: /input/certs/envoy-key.pem
        sni: localhost
    load_assignment:
      cluster_name: mycluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 18443

  - name: sds_cluster
    connect_timeout: 5s
    type: STATIC
    load_assignment:
      cluster_name: sds_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 18000

  listeners:
  - name: http
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8443
    #socket_options:
    #  - description: "Attempt to set invalid socket option"
    #    state: STATE_LISTENING
    #    level: 41 # IPPROTO_IPV6
    #    name: 67 # IPV6_TCLASS
    #    int_value: 123
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: fileaccesslog
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: myroute
            virtual_hosts:
            - name: myupstream
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: mycluster
      #transport_socket:
      #  name: "envoy.transport_sockets.tls"
      #  typed_config:
      #    "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
      #    common_tls_context:
      #      tls_certificate_sds_secret_configs:
      #        name: envoy
      #        sds_config:
      #          #path_config_source:
      #          #  path: /input/configs/envoy-sds-auth-secret-tls-certificate-compose.yaml
      #          api_config_source:
      #            transport_api_version: V3
      #            api_type: gRPC
      #            grpc_services:
      #              envoy_grpc:
      #                cluster_name: sds_cluster
