envoy/configs/envoy-jwt-auth-filter.yaml
node:
  id: mynode
  cluster: mycluster

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  clusters:
  - name: echoserver
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: echoserver
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: echoserver
                port_value: 8080
  - name: keycloak
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: keycloak
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: keycloak
                port_value: 8080

  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: fileaccesslog
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                keycloak:
                  issuer: https://keycloak.127-0-0-15.nip.io/realms/envoy
                  remote_jwks:
                    http_uri:
                      uri: http://keycloak/realms/envoy/protocol/openid-connect/certs
                      cluster: keycloak
                      timeout: 1s
                    async_fetch: {}
              requirement_map:
                require_jwt:
                  provider_name: keycloak
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: myroute
            virtual_hosts:
            - name: echoserver
              domains:
              - "echoserver.127-0-0-15.nip.io"
              routes:
              - match:
                  prefix: "/protected"
                route:
                  cluster: echoserver
                typed_per_filter_config:
                  envoy.filters.http.jwt_authn:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
                    requirement_name: require_jwt
              - match:
                  prefix: "/"
                route:
                  cluster: echoserver
            - name: keycloak
              domains:
              - "keycloak.127-0-0-15.nip.io"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: keycloak
                typed_per_filter_config:
                  envoy.filters.http.jwt_authn:
                    "@type": type.googleapis.com/envoy.config.route.v3.FilterConfig
                    disabled: true
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
              name: tls_certificate_secret
              sds_config:
                path_config_source:
                  path: /input/configs/envoy-sds-auth-secret-tls-certificate-compose.yaml
            key_log:
              path: "/tmp/envoy-wireshark-keys.log"
