envoy/configs/envoy-oauth2-filter.yaml
node:
  id: mynode
  cluster: mycluster

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  clusters:
  - name: echoserver
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: echoserver
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: echoserver
                port_value: 8080
  - name: keycloak
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: keycloak
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: keycloak
                port_value: 8080

  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: fileaccesslog
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.oauth2
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
              config:
                token_endpoint:
                  cluster: keycloak
                  uri: keycloak:8080/realms/envoy/protocol/openid-connect/token
                  timeout: 3s
                authorization_endpoint: https://keycloak.127-0-0-15.nip.io/realms/envoy/protocol/openid-connect/auth
                redirect_uri: https://echoserver.127-0-0-15.nip.io/callback
                redirect_path_matcher:
                  path:
                    exact: /callback
                signout_path:
                  path:
                    exact: /signout
                credentials:
                  client_id: envoy-confidential
                  token_secret:
                    name: token
                    sds_config:
                      path_config_source:
                        path: /input/configs/envoy-sds-auth-oauth2-token-secret.yaml
                  hmac_secret:
                    name: hmac
                    sds_config:
                      path_config_source:
                        path: /input/configs/envoy-sds-auth-oauth2-hmac-secret.yaml
                auth_scopes:
                - openid
                - email
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: myroute
            virtual_hosts:
            - name: echoserver
              domains:
              - "echoserver.127-0-0-15.nip.io"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: echoserver
            - name: keycloak
              domains:
              - "keycloak.127-0-0-15.nip.io"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: keycloak
                typed_per_filter_config:
                  envoy.filters.http.oauth2:
                    "@type": type.googleapis.com/envoy.config.route.v3.FilterConfig
                    disabled: true
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
              name: tls_certificate_secret
              sds_config:
                path_config_source:
                  path: /input/configs/envoy-sds-auth-secret-tls-certificate-compose.yaml
            key_log:
              path: "/tmp/envoy-wireshark-keys.log"
