envoy/configs/envoy-partial-chain.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  clusters:
  - name: mycluster
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: mycluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8081
  listeners:
  - name: http
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: fileaccesslog
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /tmp/envoy-access-log.txt
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: myroute
            virtual_hosts:
            - name: myupstream
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: mycluster
      transport_socket:
        name: "envoy.transport_sockets.tls"
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_params:
              signature_algorithms:
              - rsa_pss_rsae_sha256
              - ecdsa_secp256r1_sha256
            tls_certificates:
              certificate_chain:
                filename: "/home/tsaarni/work/devenvs/envoy/certs/envoy.pem"
              private_key:
                filename: "/home/tsaarni/work/devenvs/envoy/certs/envoy-key.pem"
            validation_context:
              trusted_ca:
                filename: "/home/tsaarni/work/devenvs/envoy/certs/client-sub-ca.pem"
            key_log:
              path: "/tmp/envoy-wireshark-keys.log"
layered_runtime:
  layers:
  - name: mylayer
    static_layer:
      #envoy.reloadable_features.enable_intermediate_ca: true
      envoy.reloadable_features.enable_intermediate_ca: false
