envoy/configs/envoy-tls-with-mutual-auth.yaml
node:
  id: mynode
  cluster: mycluster

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  clusters:
  - name: mycluster
    type: STRICT_DNS
    connect_timeout: 5s
    transport_socket:
      name: "envoy.transport_sockets.tls"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: /input/certs/server-ca.pem
          tls_certificates:
            certificate_chain:
              filename: /input/certs/envoy.pem
            private_key:
              filename: /input/certs/envoy-key.pem
          tls_params:
            #tls_maximum_protocol_version: TLSv1_2
            tls_maximum_protocol_version: TLSv1_3
        sni: localhost
    load_assignment:
      cluster_name: mycluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: echoserver
                port_value: 8443
  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: fileaccesslog
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: myroute
            virtual_hosts:
            - name: myupstream
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: mycluster
      transport_socket:
        name: "envoy.transport_sockets.tls"
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
              name: tls_certificate_secret
              sds_config:
                resource_api_version: V3
                path_config_source:
                  path: /input/configs/envoy-sds-auth-secret-tls-certificate-compose.yaml
            validation_context_sds_secret_config:
              name: validation_context_secret
              sds_config:
                resource_api_version: V3
                path_config_source:
                  path: /input/configs/envoy-sds-auth-secret-validation-context-compose.yaml
          require_client_certificate: true
