envoy/configs/envoy-tls13-failed-auth-retry-http-connection-manager.yaml
static_resources:
  clusters:
  - name: mycluster
    type: STRICT_DNS
    connect_timeout: 5s
    transport_socket:
      name: "envoy.transport_sockets.tls"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: /input/certs/server-ca.pem
          tls_certificates:
            certificate_chain:
              #filename: /input/certs/envoy.pem
              filename: /input/certs/untrusted.pem
            private_key:
              #filename: /input/certs/envoy-key.pem
              filename: /input/certs/untrusted-key.pem
          tls_params:
            #tls_maximum_protocol_version: TLSv1_2
            tls_maximum_protocol_version: TLSv1_3
        sni: localhost
    load_assignment:
      cluster_name: mycluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: echoserver1
                port_value: 8443
        - endpoint:
            address:
              socket_address:
                address: echoserver2
                port_value: 8443
  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: fileaccesslog
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: myroute
            virtual_hosts:
            - name: myupstream
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: mycluster
                  retry_policy:
                    num_retries: 1
                    #retry_on: reset
                    retry_on: connect-failure
